@@ -7,6 +7,7 @@ v0.9.2
 * [BGBUILD-213] CloudSigma support
 * [BGBUILD-209] Wrong /etc/mtab on Fedora 15 appliances causes errors
 * [BGBUILD-203] Vmware vmdk disk size is wrong when installing via kickstart files
+* [BGBUILD-207] Guestfs dies on Fedora 15 with 'KVM not supported for this target' message
 
 v0.9.1
 
